--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,8 @@
 server.port=8005
 
 # H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb
+# DB_CLOSE_DELAY=-1 ensures the data doesn't disappear when the last connection closes
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
